--- a/home_page_css/home_page.css
+++ b/home_page_css/home_page.css
@@ -44,3 +44,31 @@
     margin-left: 0%;
     margin-top: 3px;
 }
+
+.topnav {
+    height: 600px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.topnav input{
+    width: 600px;
+    height: 50px;
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a, .topnav input[type=text] {
+    float: none;
+    display: block;
+    text-align: left;
+    width: 100%;
+    padding: 14px;
+    position: center;
+  }
+  .topnav input[type=text] {
+    border: 1px solid #ccc;
+
+  }
+}
