--- a/home_page_css/home_page.css
+++ b/home_page_css/home_page.css
@@ -47,7 +47,7 @@
 
 
 
-/*________________________________________________________*/
+/*_______________________Dropdown______________________*/
 
 
 .dropdown {
@@ -89,6 +89,11 @@
     display: block;
 }
 
+
+
+/*_______________________Search______________________*/
+
+
 .topnav {
     height: 600px;
     display: flex;
@@ -97,9 +102,9 @@
 }
 
 .topnav input{
-    width: 600px;
-    height: 50px;
-    border-radius: 10px;
+    width: 300px;
+    height: 29px;
+    border-radius: 16px;
 }
 
 @media screen and (max-width: 600px) {
@@ -111,14 +116,88 @@
     padding: 14px;
     position: center;
   }
+
   .topnav input[type=text] {
     border: 1px solid #ccc;
 
   }
-
 }
 
+#login_body{
+    background-color: #f7cdae;
+  }
+
+#log_in{
+   width: 40%;
+    height: 600px;
+    background-color: #373543;
+    margin-left: 28%;
+    text-align: center;
+    position: absolute;
+    border-radius: 20px;
 }
 
+#h2{
+    text-align: center;
+    color: #f7cdae;
+    font-size: 35px;
+}
+
+#uname{
+    color: #f7cdae;
+    text-align: left;
+    padding: 24px;
+    font-size: larger;
+    margin-left: 20px;
+}
+
+#input1{
+    width: 385px;
+    height: 35px;
+    border-radius: 32px;
+    background-color: #f7cdae;
+    position: relative;
+    top: -26px;
+}
+
+#pass{
+    color: #f7cdae;
+    text-align: left;
+    padding: 24px;
+    font-size: larger;
+    margin-left: 20px;
+}
+
+#input2{
+    width: 385px;
+    height: 35px;
+    border-radius: 32px;
+    background-color: #f7cdae;
+    position: relative;
+    top: -26px;
+}
+
+#libtn{
+    width: 190px;
+    height: 40px;
+    border-radius: 34px;
+    margin-top: 55px;
+    background-color: #f1c8aa;
+    color: #4a4a4a;
+}
+
+#libtn:hover{
+    background-color: #bf997e;
+    
+}
+
+#signup{
+    color: #697793;
+    position: relative;
+    top: 7px;
+}
+
+#signup:hover{
+    color: #808da8;
 }
 
