--- a/home_page_css/home_page.css
+++ b/home_page_css/home_page.css
@@ -1,6 +1,7 @@
 body, html {
   height: 100%;
   margin: 0;
+  background-color: #373543;
 }
 
 .hero-image{
@@ -316,7 +317,6 @@ body, html {
 #test{
     width: 100%;
     height: 300px;
-    background-color: #f7cdae;
 }
 
 
