--- a/home_page_css/home_page.css
+++ b/home_page_css/home_page.css
@@ -109,7 +109,7 @@ body, html {
 .topnav {
     height: 600px;
     display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
